--- a/mods/ts/tilesets/temperate.yaml
+++ b/mods/ts/tilesets/temperate.yaml
@@ -1,10 +1,11 @@
 General:
 	Name: Temperate
 	Id: TEMPERATE
+	Extensions: .tem, .shp
 	HeightDebugColors: 00000080, 00004480, 00008880, 0000CC80, 0000FF80, 4400CC80, 88008880, CC004480, FF110080, FF550080, FF990080, FFDD0080, DDFF0080, 99FF0080, 55FF0080, 11FF0080
 	EditorTemplateOrder: Misc Buildings, Clear, Cliff Pieces, Ice Flow, House, Blank, Ice Ramps, Cliff Set, Civilian Buildings, Shore Pieces, Rough LAT tile, Clear/Rough LAT, Cliff/Water pieces, Bendy Dirt Roads, Dirt Road Junctions, Straight Dirt Roads, Bridges, Paved Roads, Water, Dirt Road Slopes, Slope Set Pieces, Dead Oil Tanker, Ruins, Waterfalls, Ground 01, Ground 02, Sand, Sand/Clear LAT, Rough ground, Paved Road Ends, TrainBridges, Pavement, Pavement/Clear LAT, Paved road bits, Green, Green/Clear LAT, Ramp edge fixup, Water slopes, Pavement (Use for LAT), Paved Road Slopes, Monorail Slopes, Waterfalls-B, Waterfalls-C, Waterfalls-D, Tunnel Floor, Tunnel Side, TrackTunnel Floor, Destroyable Cliffs, Water Caves, Scrin Wreckage, DirtTrackTunnel Floor, DirtTunnel Floor, Crystal LAT tile, Clear Crystal LAT, Swampy, Swampy LAT, Blue Mold, Blue Mold LAT, Crystal Cliff, Kodiak Crash
 	SheetSize: 2048
-	EnableDepth: true
+	EnableDepth: false
 	MinHeightColorBrightness: 1.0
 	MaxHeightColorBrightness: 1.6
 
@@ -132,7 +133,7 @@ Templates:
 	Template@3:
 		Categories: Misc Buildings
 		Id: 3
-		Images: bld03.tem
+		Images: dirtcleartile.shp #bld03.tem
 		Size: 3, 3
 		Tiles:
 			0: Cliff
@@ -227,7 +228,7 @@ Templates:
 	Template@8:
 		Categories: Cliff Pieces
 		Id: 8
-		Images: clif01.tem
+		Images: dirtcleartile.shp #clif01.tem
 		Size: 1, 1
 		Tiles:
 			0: Rough
@@ -238,7 +239,7 @@ Templates:
 	Template@9:
 		Categories: Cliff Pieces
 		Id: 9
-		Images: clif02.tem
+		Images: dirtcleartile.shp #clif02.tem
 		Size: 1, 1
 		Tiles:
 			0: Rough
@@ -712,7 +713,7 @@ Templates:
 	Template@60:
 		Categories: Cliff Set
 		Id: 60
-		Images: cliff01.tem
+		Images: dirtcleartile.shp #cliff01.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -741,7 +742,7 @@ Templates:
 	Template@61:
 		Categories: Cliff Set
 		Id: 61
-		Images: cliff02.tem
+		Images: dirtcleartile.shp #cliff02.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -759,7 +760,7 @@ Templates:
 	Template@62:
 		Categories: Cliff Set
 		Id: 62
-		Images: cliff03.tem
+		Images: dirtcleartile.shp #cliff03.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -788,7 +789,7 @@ Templates:
 	Template@63:
 		Categories: Cliff Set
 		Id: 63
-		Images: cliff04.tem
+		Images: dirtcleartile.shp #cliff04.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -817,7 +818,7 @@ Templates:
 	Template@64:
 		Categories: Cliff Set
 		Id: 64
-		Images: cliff05.tem
+		Images: dirtcleartile.shp #cliff05.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -847,7 +848,7 @@ Templates:
 	Template@65:
 		Categories: Cliff Set
 		Id: 65
-		Images: cliff06.tem
+		Images: dirtcleartile.shp #cliff06.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -877,7 +878,7 @@ Templates:
 	Template@66:
 		Categories: Cliff Set
 		Id: 66
-		Images: cliff07.tem
+		Images: dirtcleartile.shp #cliff07.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -907,7 +908,7 @@ Templates:
 	Template@67:
 		Categories: Cliff Set
 		Id: 67
-		Images: cliff08.tem
+		Images: dirtcleartile.shp #cliff08.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -925,7 +926,7 @@ Templates:
 	Template@68:
 		Categories: Cliff Set
 		Id: 68
-		Images: cliff09.tem
+		Images: dirtcleartile.shp #cliff09.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -949,7 +950,7 @@ Templates:
 	Template@69:
 		Categories: Cliff Set
 		Id: 69
-		Images: cliff10.tem
+		Images: dirtcleartile.shp #cliff10.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -973,7 +974,7 @@ Templates:
 	Template@70:
 		Categories: Cliff Set
 		Id: 70
-		Images: cliff11.tem
+		Images: dirtcleartile.shp #cliff11.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -997,7 +998,7 @@ Templates:
 	Template@71:
 		Categories: Cliff Set
 		Id: 71
-		Images: cliff12.tem
+		Images: dirtcleartile.shp #cliff12.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1009,7 +1010,7 @@ Templates:
 	Template@72:
 		Categories: Cliff Set
 		Id: 72
-		Images: cliff13.tem
+		Images: dirtcleartile.shp #cliff13.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1021,7 +1022,7 @@ Templates:
 	Template@73:
 		Categories: Cliff Set
 		Id: 73
-		Images: cliff14.tem
+		Images: dirtcleartile.shp #cliff14.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1033,7 +1034,7 @@ Templates:
 	Template@74:
 		Categories: Cliff Set
 		Id: 74
-		Images: cliff15.tem
+		Images: dirtcleartile.shp #cliff15.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -1063,7 +1064,7 @@ Templates:
 	Template@75:
 		Categories: Cliff Set
 		Id: 75
-		Images: cliff16.tem
+		Images: dirtcleartile.shp #cliff16.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -1093,7 +1094,7 @@ Templates:
 	Template@76:
 		Categories: Cliff Set
 		Id: 76
-		Images: cliff17.tem
+		Images: dirtcleartile.shp #cliff17.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -1123,7 +1124,7 @@ Templates:
 	Template@77:
 		Categories: Cliff Set
 		Id: 77
-		Images: cliff18.tem
+		Images: dirtcleartile.shp #cliff18.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -1141,7 +1142,7 @@ Templates:
 	Template@78:
 		Categories: Cliff Set
 		Id: 78
-		Images: cliff19.tem
+		Images: dirtcleartile.shp #cliff19.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -1171,7 +1172,7 @@ Templates:
 	Template@79:
 		Categories: Cliff Set
 		Id: 79
-		Images: cliff20.tem
+		Images: dirtcleartile.shp #cliff20.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -1201,7 +1202,7 @@ Templates:
 	Template@80:
 		Categories: Cliff Set
 		Id: 80
-		Images: cliff21.tem
+		Images: dirtcleartile.shp #cliff21.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -1231,7 +1232,7 @@ Templates:
 	Template@81:
 		Categories: Cliff Set
 		Id: 81
-		Images: cliff22.tem
+		Images: dirtcleartile.shp #cliff22.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -1249,7 +1250,7 @@ Templates:
 	Template@82:
 		Categories: Cliff Set
 		Id: 82
-		Images: cliff23.tem
+		Images: dirtcleartile.shp #cliff23.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -1267,7 +1268,7 @@ Templates:
 	Template@83:
 		Categories: Cliff Set
 		Id: 83
-		Images: cliff24.tem
+		Images: dirtcleartile.shp #cliff24.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -1285,7 +1286,7 @@ Templates:
 	Template@84:
 		Categories: Cliff Set
 		Id: 84
-		Images: cliff25.tem
+		Images: dirtcleartile.shp #cliff25.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -1303,7 +1304,7 @@ Templates:
 	Template@85:
 		Categories: Cliff Set
 		Id: 85
-		Images: cliff26.tem
+		Images: dirtcleartile.shp #cliff26.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1315,7 +1316,7 @@ Templates:
 	Template@86:
 		Categories: Cliff Set
 		Id: 86
-		Images: cliff27.tem
+		Images: dirtcleartile.shp #cliff27.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -1339,7 +1340,7 @@ Templates:
 	Template@87:
 		Categories: Cliff Set
 		Id: 87
-		Images: cliff28.tem
+		Images: dirtcleartile.shp #cliff28.tem
 		Size: 2, 2
 		Tiles:
 			1: Cliff
@@ -1363,7 +1364,7 @@ Templates:
 	Template@88:
 		Categories: Cliff Set
 		Id: 88
-		Images: cliff29.tem
+		Images: dirtcleartile.shp #cliff29.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1375,7 +1376,7 @@ Templates:
 	Template@89:
 		Categories: Cliff Set
 		Id: 89
-		Images: cliff30.tem
+		Images: dirtcleartile.shp #cliff30.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1387,7 +1388,7 @@ Templates:
 	Template@90:
 		Categories: Cliff Set
 		Id: 90
-		Images: cliff31.tem
+		Images: dirtcleartile.shp #cliff31.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -1411,7 +1412,7 @@ Templates:
 	Template@91:
 		Categories: Cliff Set
 		Id: 91
-		Images: cliff32.tem
+		Images: dirtcleartile.shp #cliff32.tem
 		Size: 2, 2
 		Tiles:
 			1: Cliff
@@ -1435,7 +1436,7 @@ Templates:
 	Template@92:
 		Categories: Cliff Set
 		Id: 92
-		Images: cliff33.tem, cliff33a.tem
+		Images: dirtcleartile.shp #cliff33.tem, cliff33a.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1447,7 +1448,7 @@ Templates:
 	Template@93:
 		Categories: Cliff Set
 		Id: 93
-		Images: cliff34.tem, cliff34a.tem
+		Images: dirtcleartile.shp #cliff34.tem, cliff34a.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1459,7 +1460,7 @@ Templates:
 	Template@94:
 		Categories: Cliff Set
 		Id: 94
-		Images: cliff35.tem
+		Images: dirtcleartile.shp #cliff35.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -1477,7 +1478,7 @@ Templates:
 	Template@95:
 		Categories: Cliff Set
 		Id: 95
-		Images: cliff36.tem
+		Images: dirtcleartile.shp #cliff36.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -1495,7 +1496,7 @@ Templates:
 	Template@96:
 		Categories: Cliff Set
 		Id: 96
-		Images: cliff37.tem
+		Images: dirtcleartile.shp #cliff37.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -1513,7 +1514,7 @@ Templates:
 	Template@97:
 		Categories: Cliff Set
 		Id: 97
-		Images: cliff38.tem
+		Images: dirtcleartile.shp #cliff38.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1525,7 +1526,7 @@ Templates:
 	Template@98:
 		Categories: Cliff Set
 		Id: 98
-		Images: cliff39.tem
+		Images: dirtcleartile.shp #cliff39.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -1537,7 +1538,7 @@ Templates:
 	Template@99:
 		Categories: Cliff Set
 		Id: 99
-		Images: cliff40.tem
+		Images: dirtcleartile.shp #cliff40.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -3261,7 +3262,7 @@ Templates:
 	Template@167:
 		Categories: Cliff/Water pieces
 		Id: 167
-		Images: wcliff01.tem
+		Images: dirtcleartile.shp #wcliff01.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -3291,7 +3292,7 @@ Templates:
 	Template@168:
 		Categories: Cliff/Water pieces
 		Id: 168
-		Images: wcliff02.tem
+		Images: dirtcleartile.shp #wcliff02.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -3309,7 +3310,7 @@ Templates:
 	Template@169:
 		Categories: Cliff/Water pieces
 		Id: 169
-		Images: wcliff03.tem
+		Images: dirtcleartile.shp #wcliff03.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -3339,7 +3340,7 @@ Templates:
 	Template@170:
 		Categories: Cliff/Water pieces
 		Id: 170
-		Images: wcliff04.tem
+		Images: dirtcleartile.shp #wcliff04.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -3369,7 +3370,7 @@ Templates:
 	Template@171:
 		Categories: Cliff/Water pieces
 		Id: 171
-		Images: wcliff05.tem
+		Images: dirtcleartile.shp #wcliff05.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3399,7 +3400,7 @@ Templates:
 	Template@172:
 		Categories: Cliff/Water pieces
 		Id: 172
-		Images: wcliff06.tem
+		Images: dirtcleartile.shp #wcliff06.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3429,7 +3430,7 @@ Templates:
 	Template@173:
 		Categories: Cliff/Water pieces
 		Id: 173
-		Images: wcliff07.tem
+		Images: dirtcleartile.shp #wcliff07.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3459,7 +3460,7 @@ Templates:
 	Template@174:
 		Categories: Cliff/Water pieces
 		Id: 174
-		Images: wcliff08.tem
+		Images: dirtcleartile.shp #wcliff08.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -3477,7 +3478,7 @@ Templates:
 	Template@175:
 		Categories: Cliff/Water pieces
 		Id: 175
-		Images: wcliff09.tem
+		Images: dirtcleartile.shp #wcliff09.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3501,7 +3502,7 @@ Templates:
 	Template@176:
 		Categories: Cliff/Water pieces
 		Id: 176
-		Images: wcliff10.tem
+		Images: dirtcleartile.shp #wcliff10.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3530,7 +3531,7 @@ Templates:
 	Template@177:
 		Categories: Cliff/Water pieces
 		Id: 177
-		Images: wcliff11.tem
+		Images: dirtcleartile.shp #wcliff11.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3554,7 +3555,7 @@ Templates:
 	Template@178:
 		Categories: Cliff/Water pieces
 		Id: 178
-		Images: wcliff12.tem
+		Images: dirtcleartile.shp #wcliff12.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -3566,7 +3567,7 @@ Templates:
 	Template@179:
 		Categories: Cliff/Water pieces
 		Id: 179
-		Images: wcliff13.tem
+		Images: dirtcleartile.shp #wcliff13.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -3578,7 +3579,7 @@ Templates:
 	Template@180:
 		Categories: Cliff/Water pieces
 		Id: 180
-		Images: wcliff14.tem
+		Images: dirtcleartile.shp #wcliff14.tem
 		Size: 1, 1
 		Tiles:
 			0: Cliff
@@ -3590,7 +3591,7 @@ Templates:
 	Template@181:
 		Categories: Cliff/Water pieces
 		Id: 181
-		Images: wcliff15.tem
+		Images: dirtcleartile.shp #wcliff15.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3620,7 +3621,7 @@ Templates:
 	Template@182:
 		Categories: Cliff/Water pieces
 		Id: 182
-		Images: wcliff16.tem
+		Images: dirtcleartile.shp #wcliff16.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3650,7 +3651,7 @@ Templates:
 	Template@183:
 		Categories: Cliff/Water pieces
 		Id: 183
-		Images: wcliff17.tem
+		Images: dirtcleartile.shp #wcliff17.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -3680,7 +3681,7 @@ Templates:
 	Template@184:
 		Categories: Cliff/Water pieces
 		Id: 184
-		Images: wcliff18.tem
+		Images: dirtcleartile.shp #wcliff18.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -3698,7 +3699,7 @@ Templates:
 	Template@185:
 		Categories: Cliff/Water pieces
 		Id: 185
-		Images: wcliff19.tem
+		Images: dirtcleartile.shp #wcliff19.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -3728,7 +3729,7 @@ Templates:
 	Template@186:
 		Categories: Cliff/Water pieces
 		Id: 186
-		Images: wcliff20.tem
+		Images: dirtcleartile.shp #wcliff20.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -3758,7 +3759,7 @@ Templates:
 	Template@187:
 		Categories: Cliff/Water pieces
 		Id: 187
-		Images: wcliff21.tem
+		Images: dirtcleartile.shp #wcliff21.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -3788,7 +3789,7 @@ Templates:
 	Template@188:
 		Categories: Cliff/Water pieces
 		Id: 188
-		Images: wcliff22.tem
+		Images: dirtcleartile.shp #wcliff22.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -3806,7 +3807,7 @@ Templates:
 	Template@189:
 		Categories: Cliff/Water pieces
 		Id: 189
-		Images: wcliff23.tem
+		Images: dirtcleartile.shp #wcliff23.tem
 		Size: 2, 3
 		Tiles:
 			0: Cliff
@@ -3841,7 +3842,7 @@ Templates:
 	Template@190:
 		Categories: Cliff/Water pieces
 		Id: 190
-		Images: wcliff24.tem
+		Images: dirtcleartile.shp #wcliff24.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -3858,7 +3859,7 @@ Templates:
 	Template@191:
 		Categories: Cliff/Water pieces
 		Id: 191
-		Images: wcliff25.tem
+		Images: dirtcleartile.shp #wcliff25.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -3875,7 +3876,7 @@ Templates:
 	Template@192:
 		Categories: Cliff/Water pieces
 		Id: 192
-		Images: wcliff26.tem
+		Images: dirtcleartile.shp #wcliff26.tem
 		Size: 2, 1
 		Tiles:
 			0: Cliff
@@ -3892,7 +3893,7 @@ Templates:
 	Template@193:
 		Categories: Cliff/Water pieces
 		Id: 193
-		Images: wcliff27.tem
+		Images: dirtcleartile.shp #wcliff27.tem
 		Size: 1, 2
 		Tiles:
 			0: Cliff
@@ -3909,7 +3910,7 @@ Templates:
 	Template@194:
 		Categories: Cliff/Water pieces
 		Id: 194
-		Images: wcliff28.tem
+		Images: dirtcleartile.shp #wcliff28.tem
 		Size: 3, 2
 		Tiles:
 			0: Cliff
@@ -10420,7 +10421,7 @@ Templates:
 	Template@403:
 		Categories: Slope Set Pieces
 		Id: 403
-		Images: ramp01.tem
+		Images: dirtcleartile.shp #ramp01.tem
 		Size: 3, 4
 		Tiles:
 			1: Clear
@@ -10490,7 +10491,7 @@ Templates:
 	Template@404:
 		Categories: Slope Set Pieces
 		Id: 404
-		Images: ramp02.tem
+		Images: dirtcleartile.shp #ramp02.tem
 		Size: 3, 4
 		Tiles:
 			0: Clear
@@ -10560,7 +10561,7 @@ Templates:
 	Template@405:
 		Categories: Slope Set Pieces
 		Id: 405
-		Images: ramp03.tem
+		Images: dirtcleartile.shp #ramp03.tem
 		Size: 4, 3
 		Tiles:
 			0: Clear
@@ -10630,7 +10631,7 @@ Templates:
 	Template@406:
 		Categories: Slope Set Pieces
 		Id: 406
-		Images: ramp04.tem
+		Images: dirtcleartile.shp #ramp04.tem
 		Size: 4, 3
 		Tiles:
 			1: Cliff
@@ -10700,7 +10701,7 @@ Templates:
 	Template@407:
 		Categories: Slope Set Pieces
 		Id: 407
-		Images: ramp05.tem
+		Images: dirtcleartile.shp #ramp05.tem
 		Size: 3, 4
 		Tiles:
 			1: Clear
@@ -10769,7 +10770,7 @@ Templates:
 	Template@408:
 		Categories: Slope Set Pieces
 		Id: 408
-		Images: ramp06.tem
+		Images: dirtcleartile.shp #ramp06.tem
 		Size: 3, 4
 		Tiles:
 			0: Clear
@@ -10819,7 +10820,7 @@ Templates:
 	Template@409:
 		Categories: Slope Set Pieces
 		Id: 409
-		Images: ramp07.tem
+		Images: dirtcleartile.shp #ramp07.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
@@ -10845,7 +10846,7 @@ Templates:
 	Template@410:
 		Categories: Slope Set Pieces
 		Id: 410
-		Images: ramp08.tem
+		Images: dirtcleartile.shp #ramp08.tem
 		Size: 4, 3
 		Tiles:
 			1: Cliff
@@ -10914,7 +10915,7 @@ Templates:
 	Template@411:
 		Categories: Slope Set Pieces
 		Id: 411
-		Images: ramp09.tem
+		Images: dirtcleartile.shp #ramp09.tem
 		Size: 4, 3
 		Tiles:
 			0: Clear
@@ -10964,7 +10965,7 @@ Templates:
 	Template@412:
 		Categories: Slope Set Pieces
 		Id: 412
-		Images: ramp10.tem
+		Images: dirtcleartile.shp #ramp10.tem
 		Size: 2, 2
 		Tiles:
 			0: Cliff
