删除不需要模型，删除mix，修改缩放渲染的位置，修复sapc，添加gdi和nod的单位8向图 Signed-off-by: baikenuer <knewxy@foxmail.com>

--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -53,7 +53,8 @@ Packages:
 	ts|bits/vxls
 
 	# Issly's Voxel
-	~isslyvox01.mix
+	ts|bits/vxls/VxlFromIssly
+	
 	ts|bits/vxls/replace
 	ts|bits/caustics
 
