--- a/mods/ts/rules/nod-vehicles.yaml
+++ b/mods/ts/rules/nod-vehicles.yaml
@@ -3,7 +3,7 @@ BGGY:
 	Inherits@VOXELS: ^VoxelActor
 	Inherits@EXPERIENCE: ^GainsExperience
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
-	Inherits: ^WithIsslyVoxRender
+	Inherits: ^WithVoxelRenderFromIssly
 	Valued:
 		Cost: 400
 	Tooltip:
@@ -44,7 +44,7 @@ BIKE:
 	Inherits@VOXELS: ^VoxelActor
 	Inherits@EXPERIENCE: ^GainsExperience
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
-	Inherits: ^WithIsslyVoxRender
+	Inherits: ^WithVoxelRenderFromIssly
 	Valued:
 		Cost: 600
 	Tooltip:
@@ -89,7 +89,7 @@ TTNK:
 	Inherits@VOXELS: ^VoxelActor
 	Inherits@EXPERIENCE: ^GainsExperience
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
-	Inherits: ^WithIsslyVoxRender
+	Inherits: ^WithVoxelRenderFromIssly
 	Valued:
 		Cost: 800
 	Tooltip:
@@ -211,7 +211,7 @@ ART2:
 	Inherits@VOXELS: ^VoxelActor
 	Inherits@EXPERIENCE: ^GainsExperience
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
-	Inherits: ^WithIsslyVoxRender
+	Inherits: ^WithVoxelRenderFromIssly
 	Valued:
 		Cost: 975
 	Tooltip:
@@ -397,7 +397,6 @@ SAPC:
 	Inherits: ^Tank
 	Inherits@VOXELS: ^VoxelActor
 	Inherits@CARGOPIPS: ^CargoPips
-	Inherits: ^WithRA2VoxRender
 	Valued:
 		Cost: 800
 	Tooltip:
@@ -428,7 +427,12 @@ SAPC:
 		UnloadVoice: Unload
 		LoadingCondition: loading
 		EjectOnDeath: true
-	WithModelBody:
+	WithModelWalkerBody:
+		TickRate: 1
+		RequiresCondition: !submerged
+	Targetable:
+		RequiresCondition: !inside-tunnel && !submerged
+	Targetable@UNDERGROUND:
 		TargetTypes: Underground
 		RequiresCondition: submerged
 	GrantConditionOnSubterraneanLayer:
